<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Registrarse">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/sinfoto" />

    <Button
        android:id="@+id/button7"
        app:backgroundTint="#1877F2"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="230dp"
        android:textSize="12dp"
        android:onClick="startCamera"
        android:text="Tomar foto" />

    <Button
        android:id="@+id/button8"
        app:backgroundTint="#1877F2"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="230dp"
        android:textSize="12dp"
        android:onClick="startGallery"
        android:text="Subir foto" />

    <Button
        android:id="@+id/button9"
        app:backgroundTint="#1877F2"
        android:layout_width="330dp"
        android:layout_height="54dp"
        android:layout_below="@id/eident"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:text="Registrarse" />

    <TextView
        android:id="@+id/textView6"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombres" />

    <EditText
        android:id="@+id/enombre"
        android:layout_below="@id/textView6"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nombre" />

    <TextView
        android:id="@+id/textView7"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        android:layout_below="@id/enombre"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apellidos" />

    <EditText
        android:id="@+id/eapellido"
        android:layout_width="345dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/textView7"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/apellido"/>

    <TextView
        android:id="@+id/textView8"
        android:textSize="18dp"
        android:layout_below="@id/eapellido"
        android:layout_marginStart="10dp"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo" />

    <EditText
        android:id="@+id/eemail"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eemail"
        android:textStyle="bold|italic"
        android:layout_marginStart="10dp"
        android:textSize="18dp"
        android:text="Contraseña" />

    <EditText
        android:id="@+id/epassw"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:layout_marginStart="10dp"
        android:textSize="18dp"
        android:layout_below="@id/epassw"
        android:text="Número de identificación" />

    <EditText
        android:id="@+id/eident"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Noident" />

</RelativeLayout>